@@ -10,6 +10,7 @@ disable=
     too-few-public-methods,
     too-many-ancestors,
     too-many-arguments,
+    too-many-boolean-expressions,
     too-many-branches,
     too-many-function-args,
     too-many-instance-attributes,
